--- a/client side/android/app/build.gradle
+++ b/client side/android/app/build.gradle
@@ -62,6 +62,9 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
+    // implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    
+    implementation 'com.google.firebase:firebase-messaging-ktx:21.0.1'
 }
