--- a/client side/android/build.gradle
+++ b/client side/android/build.gradle
@@ -6,9 +6,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.4'
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        // classpath 'com.google.gms:google-services:4.3.4'
+        classpath 'com.google.gms:google-services:4.3.5'
+        // classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // Example existing classpath
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        // Add the google services classpath
+        // classpath 'com.google.gms:google-services:4.3.2'
     }
 }
 
