--- a/client side/pubspec.yaml
+++ b/client side/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   firebase_messaging: ^7.0.3
   firebase_core: ^0.5.0+1
   # firebase: ^8.0.0
-
+  http: ^0.12.2
 
 dev_dependencies:
   flutter_test:
