--- a/client side/pubspec.yaml
+++ b/client side/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^0.5.0+1
   # firebase: ^8.0.0
   http: ^0.12.2
+  flutter_local_notifications: ^4.0.1
 
 dev_dependencies:
   flutter_test:
